--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,9 +40,9 @@ en:
       branding:
         change: Change Image
         info: Change the branding image that appears in the top left corner
-        placeholder: Image Url...
-        title: Branding Image
-        invalid: Invalid URL
+        placeholder: https://live.staticflickr.com/65535/50167194612_d0bd994ddb_o.png
+        title: Vinggle
+        invalid:  https://live.staticflickr.com/65535/50167194612_d0bd994ddb_o.png
       legal:
         change: Change URL
         info: Change the Terms Link that appears in the bottom of the page
@@ -90,7 +90,7 @@ en:
         title: Maintenance Banner
         display: Set
         clear: Clear
-        time: "Example: Update scheduled on December 13 @ 23:00 ET. Users may experience problems signing in."        
+        time: "Example: Update scheduled on December 13 @ 23:00 ET. Users may experience problems signing in."
       preupload:
         info: Users can preupload a presentation to be used as the default presentation for that specific room
         title: Allow Users to Preupload Presentations
@@ -538,7 +538,7 @@ en:
       fail: Failed to delete room (%{error})
     enter_the_access_code: Enter the room's access code
     invalid_provider: You have entered an invalid url. Please check the url and try again.
-    invitation_description: You have been invited to join %{name} using BigBlueButton. To join, click the link above and enter your name.  
+    invitation_description: You have been invited to join %{name} using BigBlueButton. To join, click the link above and enter your name.
     invited: You have been invited to join
     recording_present: The session is going to be recorded. This may include voice and video from your side.
     invite_participants: Invite Participants
